--- a/.github/workflows/auto_refill.yml
+++ b/.github/workflows/auto_refill.yml
@@ -1,11 +1,9 @@
 name: Auto Refill Question Bank
 
 on:
-  # 手動実行
   workflow_dispatch: {}
-  # 毎日 04:00 JST に実行（GitHub Actions の cron は UTC。JST 04:00 = 前日 19:00 UTC）
   schedule:
-    - cron: "0 19 * * *"
+    - cron: '0 19 * * *'  # JST 04:00（UTC 19:00）
 
 permissions:
   contents: write
@@ -17,29 +15,26 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.x'
 
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install google-generativeai pypdf
 
-      - name: Run auto_refill
+      - name: Refill questions
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          # 必要なら以下で調整可能
-          GEMINI_MODEL: gemini-2.0-flash
-          NUM_QUESTIONS: "3"
         run: |
-          python tools/auto_refill.py
+          python tools/refill_bank.py
 
       - name: Commit & push if changed
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add bank/question_bank.jsonl || true
-          git diff --cached --quiet || git commit -m "chore: auto-refill question bank"
+          git diff --staged --quiet || git commit -m "auto_refill: update bank"
           git push
