--- a/.github/workflows/auto_refill.yml
+++ b/.github/workflows/auto_refill.yml
@@ -1,9 +1,9 @@
 name: Auto Refill Question Bank
 
 on:
-  workflow_dispatch: {}
   schedule:
-    - cron: '0 19 * * *'  # JST 04:00（UTC 19:00）
+    - cron: '0 19 * * *'   # JST 04:00（UTC19:00）
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -18,23 +18,26 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: '3.11'
 
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install google-generativeai pypdf
+          pip install google-generativeai
 
       - name: Refill questions
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        run: |
-          python tools/refill_bank.py
+        run: python tools/auto_refill.py
 
       - name: Commit & push if changed
         run: |
           git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add bank/question_bank.jsonl || true
-          git diff --staged --quiet || git commit -m "auto_refill: update bank"
-          git push
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add bank/latest.json
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: auto-refill $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+            git push
+          fi
