--- a/.github/workflows/auto_refill.yml
+++ b/.github/workflows/auto_refill.yml
@@ -2,15 +2,14 @@ name: Auto Refill Question Bank
 
 on:
   schedule:
-    - cron: '0 19 * * *'   # JST 04:00（UTC19:00）
+    # UTC 19:00 = JST 04:00
+    - cron: "0 19 * * *"
   workflow_dispatch:
-
-permissions:
-  contents: write
 
 jobs:
   refill:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -18,26 +17,27 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install google-generativeai
+          pip install -r requirements.txt
 
       - name: Refill questions
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        run: python tools/auto_refill.py
+        run: |
+          python tools/auto_refill.py
 
       - name: Commit & push if changed
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add bank/latest.json
-          if git diff --cached --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "chore: auto-refill $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
+          if [[ -n "$(git status --porcelain)" ]]; then
+            git config user.name "github-actions[bot]"
+            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+            git add bank/*.json || true
+            git commit -m "chore: auto refill bank $(date -u '+%Y-%m-%dT%H:%M:%SZ')"
             git push
+          else
+            echo "No changes to commit."
           fi
