--- a/.github/workflows/auto_refill.yml
+++ b/.github/workflows/auto_refill.yml
@@ -1,10 +1,14 @@
 name: Auto Refill Question Bank
 
 on:
-  schedule:
-    # UTC 19:00 = JST 04:00
-    - cron: "0 19 * * *"
+  # 手動実行
   workflow_dispatch:
+  # JST 04:00 = UTC 19:00（前日）
+  schedule:
+    - cron: '0 19 * * *'
+
+permissions:
+  contents: write   # 自動コミットに必要
 
 jobs:
   refill:
@@ -17,12 +21,15 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
+          # 既存の requirements.txt を流用（google-generativeai / pypdf が入っていればOK）
           pip install -r requirements.txt
+          # 念のため不足時の対策（入っていればスキップされる）
+          pip install google-generativeai pypdf || true
 
       - name: Refill questions
         env:
@@ -32,12 +39,13 @@ jobs:
 
       - name: Commit & push if changed
         run: |
-          if [[ -n "$(git status --porcelain)" ]]; then
-            git config user.name "github-actions[bot]"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add bank/*.json || true
-            git commit -m "chore: auto refill bank $(date -u '+%Y-%m-%dT%H:%M:%SZ')"
-            git push
-          else
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          # bank/ 配下の追加・変更・削除すべてを対象にする
+          git add -A bank/
+          if git diff --cached --quiet; then
             echo "No changes to commit."
+          else
+            git commit -m "chore: auto-refill bank $(date -u +%FT%TZ)"
+            git push
           fi
