--- a/.github/workflows/auto_refill.yml
+++ b/.github/workflows/auto_refill.yml
@@ -1,43 +1,51 @@
-name: Auto Refill Question Bank
+name: Auto refill question bank
 
 on:
-  workflow_dispatch: {}
   schedule:
-    - cron: "0 19 * * *"  # UTC 19:00 = JST 04:00
+    # 毎日 00:00 UTC（日本時間 09:00）に実行
+    - cron: "0 0 * * *"
+  # 手動実行も許可
+  workflow_dispatch: {}
 
 permissions:
   contents: write
 
 jobs:
-  refill:
+  auto-refill:
     runs-on: ubuntu-latest
+
+    env:
+      # GitHub リポジトリの Secrets に設定しておくこと
+      GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install deps
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install google-generativeai pypdf
+          # auto_refill.py で使用するライブラリのみを明示的にインストール
+          pip install google-genai python-dotenv
 
-      - name: Refill questions
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+      - name: Run auto refill script
         run: |
           python tools/auto_refill.py
 
-      - name: Commit & push if changed
+      - name: Commit and push changes if needed
         run: |
-          if [[ -n "$(git status --porcelain)" ]]; then
+          CHANGED_FILES=$(git status --porcelain bank/question_bank.jsonl bank/meta.json || true)
+          if [ -n "$CHANGED_FILES" ]; then
+            echo "Detected changes in question bank or meta. Committing..."
             git config user.name "github-actions[bot]"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add bank/*.json bank/*.jsonl || true
-            git commit -m "chore: auto refill bank $(date -u '+%Y-%m-%dT%H:%M:%SZ')"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git add bank/question_bank.jsonl bank/meta.json
+            git commit -m "chore: auto refill question bank"
             git push
           else
             echo "No changes to commit."
