--- a/.github/workflows/auto_refill.yml
+++ b/.github/workflows/auto_refill.yml
@@ -1,10 +1,9 @@
-name: Auto refill question bank
+name: Auto Refill Question Bank
 
 on:
   schedule:
-    # 毎日 00:00 UTC（日本時間 09:00）に実行
+    # 毎日 00:00 UTC（日本時間 09:00）
     - cron: "0 0 * * *"
-  # 手動実行も許可
   workflow_dispatch: {}
 
 permissions:
@@ -13,10 +12,6 @@ permissions:
 jobs:
   auto-refill:
     runs-on: ubuntu-latest
-
-    env:
-      # GitHub リポジトリの Secrets に設定しておくこと
-      GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
     steps:
       - name: Checkout repository
@@ -30,23 +25,25 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # auto_refill.py で使用するライブラリのみを明示的にインストール
-          pip install google-genai python-dotenv
+          pip install google-genai python-dotenv toml pydantic
 
-      - name: Run auto refill script
+      - name: Run auto_refill script
+        env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
           python tools/auto_refill.py
 
-      - name: Commit and push changes if needed
+      - name: Commit and push updates
         run: |
-          CHANGED_FILES=$(git status --porcelain bank/question_bank.jsonl bank/meta.json || true)
-          if [ -n "$CHANGED_FILES" ]; then
-            echo "Detected changes in question bank or meta. Committing..."
-            git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add bank/question_bank.jsonl bank/meta.json
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          git add bank/question_bank.jsonl || true
+          git add bank/meta.json || true
+
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+          else
             git commit -m "chore: auto refill question bank"
             git push
-          else
-            echo "No changes to commit."
           fi
